GERONIMO-1612 - Remove -Djava.endorsed.dirs="$JAVA_ENDORSED_DIRS" from commands in geronimo.sh. Was accidentally carried over from the Tomcat code the script was based upon. (merged from trunk)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@376520 13f79535-47bb-0310-9956-ffa450edef68